Modified some paddings and margin in css, and error with whitespaces from both ends when deleting TODO solved

--- a/src/views/css/styles.less
+++ b/src/views/css/styles.less
@@ -72,7 +72,7 @@ body{
     .form{
         margin-top: 20px;
         margin-bottom: 20px;
-        .todo-text{
+        .new-todo-text{
             height: 40px;
             width: 370px;
             padding-left: 10px;
@@ -92,13 +92,17 @@ body{
                 margin-bottom: 15px;
                 background-color: rgb(7 0 0 / 20%);
                 .rounded-corners;
+
+                .todo-text{
+                    padding: 15px 0px;
+                }
                 
                 .delete-todo{
                     display: flex;
                     text-align: initial;
                     justify-content: space-between;
                     align-items: center;
-                    margin-right: 35px;
+                    margin-right: 20px;
                     margin-left: 30px;
                 }
             }
@@ -122,7 +126,7 @@ body{
                 flex-direction: column;
                 align-items: center;
 
-                .todo-text{
+                .new-todo-text{
                     order: 1;
                     width: 80%;
                     margin-bottom: 10px;
